Añadidos botones de "Gora Igo"

--- a/DNS.html
+++ b/DNS.html
@@ -86,7 +86,10 @@
                             <li>Azkenekoz, kapturan agerrarazten den aukera horretan bi klik egingo dugu, eta gure DNS-aren helbidea idatziko dugu.</li>
                             <img src="Media/DNS/dns8.PNG" id="argazkiaPausoka"><br>
 
-                        </ol>   
+                        </ol> 
+                        <div class="GoraIgo">
+                            <a href="DNS.html">GORA IGO ↑</a>
+                        </div>  
                     </div>
             </div>
         </div>
