--- a/Debian2.html
+++ b/Debian2.html
@@ -56,78 +56,77 @@
                     </p>
                     <h4>Jarraitzeko pausuak</h4>
                     <ol>
-               
-                            <ul>
-                                <li>
-                                        <a>‘Crear VM’-ri emango diogu eta  eta aurreko orrian deskargatu dugun ISO-a aukeratuko dugu eta nahi ditugun datuekin beteko dugu:</a><br><br><br>
-                                        <img src="Media/Debian/Debian.PNG" id="argazkiaPausoka">
-                                </li>                            
-                                <li>
-                                        <a>Instalazioari ekingo diogu:</a><br><br><br>
-                                        <img src="Media/Debian/Debian1.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Makina nahieran konfiguratuko dugu, ala nola: <b>hizkuntza</b>, <b>kokapena</b> eta <b>teklatua</b>:  </a><br><br><br>
-                                        <img src="Media/Debian/Debian2.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Debian/Debian3.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Debian/Debian4.PNG" id="argazkiaPausoka">
-                                </li>              
-                                <li>
-                                        <a>Konponentzeak kargatuko dira orain, itxarotea tokatuko zaigu:</a><br><br><br>
-                                        <img src="Media/Debian/Debian5.PNG" id="argazkiaPausoka">
-                                </li>                    
-                                <li>
-                                        <a>Sarearen konfigurazioarekin hasiko gara, datuak (makinaren izena eta domeinua) nahieran:</a><br><br><br>
-                                        <img src="Media/Debian/Debian6.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Debian/Debian7.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Jarraian, erabiltzaileak eta pasahitzak kudeatzen hasiko gara:</a><br><br><br>
-                                        <img src="Media/Debian/Debian8.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Debian/Debian9.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Debian/Debian10.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Debian/Debian11.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Ondoren, gure makinaren erlojua konfiguratuko dugu:</a><br><br><br>
-                                        <img src="Media/Debian/Debian12.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Hau egin ondoren disken partizioen kudeaketari ekingo diogu:</a><br><br><br>
-                                        <img src="Media/Debian/Debian13.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Debian/Debian14.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Debian/Debian15.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Honen ondoren instalazioa betearazi arte itxaron beharko dugu:</a><br><br><br>
-                                        <img src="Media/Debian/Debian16.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Jarraituz, paketeen kudeatzailea konfiguratzeari ekingo diogu, nahieran erabakiko ditugu hemengo aukera desberdinak:</a><br><br><br>
-                                        <img src="Media/Debian/Debian17.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Debian/Debian18.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Konfiguratzaileari itxarongo diogu...</a><br><br><br>
-                                        <img src="Media/Debian/Debian19.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Inkestan parte hartu nahi baduzu, <b>BAIETZ</b> aukeratu, guk instalazioarekin azkarrago amaitzeko <b>EZETZ</b> aukeratuko dugu:</a><br><br><br>
-                                        <img src="Media/Debian/Debian20.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Azkenengoz itxarongo dugu...</a><br><br><br>
-                                        <img src="Media/Debian/Debian21.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Debian/Debian22.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Debianen makina birtual bat sortu duzu dagoeneko!</a><br><br><br>
-                                        
-                                </li>
-
-                            </ul>
-                        </li>
+                        <ul>
+                            <li>
+                                <a>‘Crear VM’-ri emango diogu eta  eta aurreko orrian deskargatu dugun ISO-a aukeratuko dugu eta nahi ditugun datuekin beteko dugu:</a><br><br><br>
+                                <img src="Media/Debian/Debian.PNG" id="argazkiaPausoka">
+                            </li>                            
+                            <li>
+                                <a>Instalazioari ekingo diogu:</a><br><br><br>
+                                <img src="Media/Debian/Debian1.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                <a>Makina nahieran konfiguratuko dugu, ala nola: <b>hizkuntza</b>, <b>kokapena</b> eta <b>teklatua</b>:  </a><br><br><br>
+                                <img src="Media/Debian/Debian2.PNG" id="argazkiaPausoka"><br><br>
+                                <img src="Media/Debian/Debian3.PNG" id="argazkiaPausoka"><br><br>
+                                <img src="Media/Debian/Debian4.PNG" id="argazkiaPausoka">
+                            </li>              
+                            <li>
+                                <a>Konponentzeak kargatuko dira orain, itxarotea tokatuko zaigu:</a><br><br><br>
+                                <img src="Media/Debian/Debian5.PNG" id="argazkiaPausoka">
+                            </li>                    
+                            <li>
+                                <a>Sarearen konfigurazioarekin hasiko gara, datuak (makinaren izena eta domeinua) nahieran:</a><br><br><br>
+                                <img src="Media/Debian/Debian6.PNG" id="argazkiaPausoka"><br><br>
+                                <img src="Media/Debian/Debian7.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                <a>Jarraian, erabiltzaileak eta pasahitzak kudeatzen hasiko gara:</a><br><br><br>
+                                <img src="Media/Debian/Debian8.PNG" id="argazkiaPausoka"><br><br>
+                                <img src="Media/Debian/Debian9.PNG" id="argazkiaPausoka"><br><br>
+                                <img src="Media/Debian/Debian10.PNG" id="argazkiaPausoka"><br><br>
+                                <img src="Media/Debian/Debian11.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                <a>Ondoren, gure makinaren erlojua konfiguratuko dugu:</a><br><br><br>
+                                <img src="Media/Debian/Debian12.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                <a>Hau egin ondoren disken partizioen kudeaketari ekingo diogu:</a><br><br><br>
+                                <img src="Media/Debian/Debian13.PNG" id="argazkiaPausoka"><br><br>
+                                <img src="Media/Debian/Debian14.PNG" id="argazkiaPausoka"><br><br>
+                                <img src="Media/Debian/Debian15.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                <a>Honen ondoren instalazioa betearazi arte itxaron beharko dugu:</a><br><br><br>
+                                <img src="Media/Debian/Debian16.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                <a>Jarraituz, paketeen kudeatzailea konfiguratzeari ekingo diogu, nahieran erabakiko ditugu hemengo aukera desberdinak:</a><br><br><br>
+                                <img src="Media/Debian/Debian17.PNG" id="argazkiaPausoka"><br><br>
+                                <img src="Media/Debian/Debian18.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                <a>Konfiguratzaileari itxarongo diogu...</a><br><br><br>
+                                <img src="Media/Debian/Debian19.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                <a>Inkestan parte hartu nahi baduzu, <b>BAIETZ</b> aukeratu, guk instalazioarekin azkarrago amaitzeko <b>EZETZ</b> aukeratuko dugu:</a><br><br><br>
+                                <img src="Media/Debian/Debian20.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                <a>Azkenengoz itxarongo dugu...</a><br><br><br>
+                                <img src="Media/Debian/Debian21.PNG" id="argazkiaPausoka"><br><br>
+                                <img src="Media/Debian/Debian22.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                <a>Debianen makina birtual bat sortu duzu dagoeneko!</a><br><br><br>
+                            </li>
+                        </ul>
                     </ol>
+                    <div class="GoraIgo">
+                        <a href="Debian2.html">GORA IGO ↑</a>
+                    </div>
                 </div>
             </div>
         </div>
