--- a/FTP.html
+++ b/FTP.html
@@ -118,8 +118,11 @@
                         <ul>
                             <li>&nbspPortuak blokeatuta egotea → Firewall-a aktibatuta badago, portu horiek baimendu beharko dituzu.</li>
                             <li>&nbspRoot erabiltzailea ez badu logeatzea lortzen → VM-a exekutatuko dugu eta kontsolan hurrengoa idatziko dugu: <b>systemctl restart ssh</b>. Ondoren berriz saiatuko gara.</li>
-                        </ul>                                 
-                    </div>
+                        </ul>
+                    <div class="GoraIgo">
+                        <a href="FTP.html">GORA IGO ↑</a>
+                    </div>                                 
+                </div>
             </div>
         </div>
         </div>
