--- a/FreeNas2.html
+++ b/FreeNas2.html
@@ -110,6 +110,9 @@
                             <ul id="pausuak">
                                 <li>FreeNAS eta TrueNAS kontrolatu ahal izateko TrueCommnad interfazea gomendatzen dizuegu, honek sistema batetik besterako kudeaketa indartua, sarbideen kontrola eta monitorizazioa eskeintzen baitu.</li>
                             </ul>
+                        <div class="GoraIgo">
+                        <a href="FreeNas2.html">GORA IGO ↑</a>
+                        </div>
                     </div>
             </div>
         </div>
