--- a/FreeNas3.html
+++ b/FreeNas3.html
@@ -83,7 +83,10 @@
                             </ol>
 
                         <p><iframe width="560" height="315" src="https://www.youtube.com/embed/xTnlYWjLUE0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-                </div>
+                        <div class="GoraIgo">
+                            <a href="FreeNas3.html">GORA IGO ↑</a>
+                        </div>
+                    </div>
             </div>
         </div>
         </div>
