--- a/FreeNas5.html
+++ b/FreeNas5.html
@@ -86,6 +86,9 @@
                                 <img src="Media/FreeNas/Freenas8.png" id="argazkiaPausoka">
                             </ol>
                             <p>&nbspAzken pausu hau amaitzerakoan, gure zerbitzariaren segurtasun kopia amaituta izango dugu!</p>
+                            <div class="GoraIgo">
+                                <a href="FreeNas5.html">GORA IGO ↑</a>
+                            </div>
                 </div>
             </div>
         </div>
