--- a/Ubuntu2.html
+++ b/Ubuntu2.html
@@ -55,72 +55,71 @@
                     </p>
                     <h4>Jarraitzeko pausuak</h4>
                     <ol>
-               
-                            <ul>
-                                <li>
-                                        <a>‘Crear VM’-ri emango diogu eta  eta aurreko orrian deskargatu dugun ISO-a aukeratuko dugu eta nahi ditugun datuekin beteko dugu eta instalazioari ekingo diogu:</a><br><br><br>
-                                        <img src="Media/Ubuntu/ubuntu1.PNG" id="argazkiaPausoka">
-                                </li>                            
-                                <li>
-                                        <a>Makina nahieran konfiguratuko dugu, ala nola: <b>hizkuntza</b>, <b>kokapena</b> eta <b>teklatua</b>:  </a><br><br><br>
-                                        <img src="Media/Ubuntu/ubuntu2.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Ubuntu/ubuntu3.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Ubuntu/ubuntu4.PNG" id="argazkiaPausoka">
-                                </li>              
-                                <li>
-                                        <a>Konponentzeak kargatuko dira orain, itxarotea tokatuko zaigu:</a><br><br><br>
-                                        <img src="Media/Ubuntu/ubuntu5.PNG" id="argazkiaPausoka">
-                                </li>                    
-                                <li>
-                                        <a>Sarearen konfigurazioarekin hasiko gara, datuak (makinaren izena eta domeinua) nahieran:</a><br><br><br>
-                                        <img src="Media/Ubuntu/ubuntu6.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Jarraian, erabiltzaileak eta pasahitzak kudeatzen hasiko gara:</a><br><br><br>
-                                        <img src="Media/Ubuntu/ubuntu7.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Ubuntu/ubuntu8.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Ondoren, gure makinaren erlojua konfiguratuko dugu:</a><br><br><br>
-                                        <img src="Media/Ubuntu/ubuntu9.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Hau egin ondoren disken partizioen kudeaketari ekingo diogu:</a><br><br><br>
-                                        <img src="Media/Ubuntu/ubuntu10.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Ubuntu/ubuntu11.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Ubuntu/ubuntu12.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Honen ondoren instalazioa betearazi arte itxaron beharko dugu:</a><br><br><br>
-                                        <img src="Media/Ubuntu/ubuntu13.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Ubuntu/ubuntu14.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Jarraituz, paketeen kudeatzailea konfiguratzeari ekingo diogu, nahieran erabakiko ditugu hemengo aukera desberdinak:</a><br><br><br>
-                                        <img src="Media/Ubuntu/ubuntu15.PNG" id="argazkiaPausoka"><br><br>
-                                        <img src="Media/Ubuntu/ubuntu16.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Konfiguratzaileari itxarongo diogu...</a><br><br><br>
-                                        <img src="Media/Ubuntu/ubuntu17.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Instalazioa amaitu denez sistema berrereabiarazi beharko dugu:</a><br><br><br>
-                                        <img src="Media/Ubuntu/ubuntu18.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Azkenengoz itxarongo dugu...</a><br><br><br>
-                                        <img src="Media/Ubuntu/ubuntu19.PNG" id="argazkiaPausoka">
-                                </li>
-                                <li>
-                                        <a>Ubuntu makina birtual bat sortu duzu dagoeneko!</a><br><br><br>
-                                        
-                                </li>
-
-                            </ul>
-                        </li>
+                        <ul>
+                            <li>
+                                    <a>‘Crear VM’-ri emango diogu eta  eta aurreko orrian deskargatu dugun ISO-a aukeratuko dugu eta nahi ditugun datuekin beteko dugu eta instalazioari ekingo diogu:</a><br><br><br>
+                                    <img src="Media/Ubuntu/ubuntu1.PNG" id="argazkiaPausoka">
+                            </li>                            
+                            <li>
+                                    <a>Makina nahieran konfiguratuko dugu, ala nola: <b>hizkuntza</b>, <b>kokapena</b> eta <b>teklatua</b>:  </a><br><br><br>
+                                    <img src="Media/Ubuntu/ubuntu2.PNG" id="argazkiaPausoka"><br><br>
+                                    <img src="Media/Ubuntu/ubuntu3.PNG" id="argazkiaPausoka"><br><br>
+                                    <img src="Media/Ubuntu/ubuntu4.PNG" id="argazkiaPausoka">
+                            </li>              
+                            <li>
+                                    <a>Konponentzeak kargatuko dira orain, itxarotea tokatuko zaigu:</a><br><br><br>
+                                    <img src="Media/Ubuntu/ubuntu5.PNG" id="argazkiaPausoka">
+                            </li>                    
+                            <li>
+                                    <a>Sarearen konfigurazioarekin hasiko gara, datuak (makinaren izena eta domeinua) nahieran:</a><br><br><br>
+                                    <img src="Media/Ubuntu/ubuntu6.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                    <a>Jarraian, erabiltzaileak eta pasahitzak kudeatzen hasiko gara:</a><br><br><br>
+                                    <img src="Media/Ubuntu/ubuntu7.PNG" id="argazkiaPausoka"><br><br>
+                                    <img src="Media/Ubuntu/ubuntu8.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                    <a>Ondoren, gure makinaren erlojua konfiguratuko dugu:</a><br><br><br>
+                                    <img src="Media/Ubuntu/ubuntu9.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                    <a>Hau egin ondoren disken partizioen kudeaketari ekingo diogu:</a><br><br><br>
+                                    <img src="Media/Ubuntu/ubuntu10.PNG" id="argazkiaPausoka"><br><br>
+                                    <img src="Media/Ubuntu/ubuntu11.PNG" id="argazkiaPausoka"><br><br>
+                                    <img src="Media/Ubuntu/ubuntu12.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                    <a>Honen ondoren instalazioa betearazi arte itxaron beharko dugu:</a><br><br><br>
+                                    <img src="Media/Ubuntu/ubuntu13.PNG" id="argazkiaPausoka"><br><br>
+                                    <img src="Media/Ubuntu/ubuntu14.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                    <a>Jarraituz, paketeen kudeatzailea konfiguratzeari ekingo diogu, nahieran erabakiko ditugu hemengo aukera desberdinak:</a><br><br><br>
+                                    <img src="Media/Ubuntu/ubuntu15.PNG" id="argazkiaPausoka"><br><br>
+                                    <img src="Media/Ubuntu/ubuntu16.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                    <a>Konfiguratzaileari itxarongo diogu...</a><br><br><br>
+                                    <img src="Media/Ubuntu/ubuntu17.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                    <a>Instalazioa amaitu denez sistema berrereabiarazi beharko dugu:</a><br><br><br>
+                                    <img src="Media/Ubuntu/ubuntu18.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                    <a>Azkenengoz itxarongo dugu...</a><br><br><br>
+                                    <img src="Media/Ubuntu/ubuntu19.PNG" id="argazkiaPausoka">
+                            </li>
+                            <li>
+                                    <a>Ubuntu makina birtual bat sortu duzu dagoeneko!</a><br><br><br>
+                            </li>
+                        </ul>
                     </ol>
+                    <div class="GoraIgo">
+                    <a href="Ubuntu2.html">GORA IGO ↑</a>
                     </div>
+                </div>
             </div>
         </div>
         </div>
