--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
                 <!-- Radio elementuarekin egiten dugu aukera batekoa delako -->
                 <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
                 <div class="carousel-item">
-                    <a href="ApacheEtaMysql.html"><img src="/Media/slider1.png"></a>
+                    <a href="ApacheEtaMysql.html"><img src="Media/Slider1.PNG"></a>
                 </div>
                 <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="">
                 <div class="carousel-item">
-                    <a href="Ubuntu.html"><img src="/Media/slider2.png"></a>
+                    <a href="Ubuntu.html"><img src="Media/Slider2.PNG"></a>
                 </div>
                 <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
                 <div class="carousel-item">
-                    <a href="DNS.html"><img src="/Media/slider3.png"></a>
+                    <a href="DNS.html"><img src="Media/Slider3.PNG"></a>
                 </div>
                 <!-- Geziak ikusi ajal izateko slider-aren atal bakoitzean...-->
                 <label for="carousel-3" class="carousel-control prev control-1">‹</label>
