--- a/GitHub2.html
+++ b/GitHub2.html
@@ -80,6 +80,9 @@
                                 <li>Push sakatzean, bertzioak aktualizatu egin dira eta aldaketak eginda egongo dira.</li><br><br>
                                 <img src="Media/GitHub/github4.PNG" id="argazkiaPausoka">
                             </ol>
+                        <div class="GoraIgo">
+                            <a href="GitHub2.html">GORA IGO ↑</a>
+                        </div> 
                     </div>
             </div>
         </div>
