--- a/ApacheEtaMysql.html
+++ b/ApacheEtaMysql.html
@@ -47,15 +47,15 @@
                     <h1>APACHE ETA MYSQL</h1>
                         <h3>DESKRIBAPENA</h3>
                         <p>&nbsp&nbspApache HTTP Server doako web-zerbitzariaren software bat da, 
-                           Unix plataformetarako kode irekikoa, eta harekin mundu osoko webguneen 
-                           %46 exekutatzen da. Webguneen jabeei web-eko edukia zerbitzatzeko aukera ematen die.
+                            Unix plataformetarako kode irekikoa, eta harekin mundu osoko webguneen 
+                            %46 exekutatzen da. Webguneen jabeei web-eko edukia zerbitzatzeko aukera ematen die.
                         </p>
 
                         <br>
                         
                         <h3>NOLA EGINGO DUGU</h3>
-                           <ol id="pausuak">
-                               <li><b>Apache:</b> Web serbitzariak sortzeko, horretarako terminalean hurrengo komandoak idatziko ditugu, sistemaren eguneraketarekin batera: 
+                            <ol id="pausuak">
+                                <li><b>Apache:</b> Web serbitzariak sortzeko, horretarako terminalean hurrengo komandoak idatziko ditugu, sistemaren eguneraketarekin batera: 
                                 </li>
                                 <pre>
                                     <span>$ sudo apt update</span>
@@ -98,18 +98,18 @@
                                     </pre>
                                     <li>Konexioa baldin badago gure Mysql-aren datu desberdinak aterako zaigu <i>Output</i>-ean</li>
                                 </ul>
-                           </ol>
+                            </ol>
                     </div>
             </div>
         </div>
         </div>
         <footer>
             <div class="footerP1">
-                    <img  src="/Media/Footer/instagra.png">
+                    <img  src="Media/Footer/instagra.png">
                     <a>@ServerWiki</a>
-                    <img  src="/Media/Footer/twitter-logo-6.png">
+                    <img  src="Media/Footer/twitter-logo-6.png">
                     <a>@ServerWiki</a> 
-                    <img src="/Media/Footer/gmail.png">
+                    <img src="Media/Footer/gmail.png">
                     <a>ServerWiki@gmail.com</a>
             </div>
             <div class="footerP2">
