--- a/Proxmox.html
+++ b/Proxmox.html
@@ -51,34 +51,34 @@
             <div class="articulos">
                 <div class="articulo1">
                     <h1>PROXMOX</h1>
-                        <h3>DESKRIBAPENA</h3>
-                        <p>&nbsp&nbspProxmox Bare-Metal plataforma bat da, eta zuzenean instalatzen da zerbitzari fisikoan, hardwarea ahalik eta gehien aprobetxatzeko makina birtualak sortzeko eta kudeatzeko.
-                        </p>
-                        
-                        <h4>Funtzioak</h4>
-                           <ol id="pausuak">
-                               <li>"Makina birtualak" gehitzea eta kudeatzea. Adibidez, besteak beste, itzali, berrabiarazi eta hardware birtuala erants dezakezu.</li>
-                                <li>Makinak nodo batetik bestera mugitu edo "Prestasun handia" aktibatu.</li>
-                                <li>"Makina birtualaren" interfaze grafiko edo kontsolara zuzenean konektatzea, VNC "HTML5 WebSockets and Canvas -- NoVNC" konexio seguru baten bidez.</li>
-                                <li>Segurtasun-kopiak programatu, segurtasun-kopiak leheneratu edo Snapshot sortu.</li>
-                                <li> Ikus grafikoki "Makina birtualen" informazioa, hala nola sare-trafikoa, prozesadorearen kontsumoa, memoriaren kontsumoa, etab.</li>
-                                <li>Batezbestekoak ISO formatuan igotzea, "Makina birtualetan" sistema eragileak instalatzeko.</li>
-                                <li>Nodoen konfigurazioa aldatu.</li>
-                                <li>"Proxmox Firewall VE"-en arauak definitzea "Makina Birtual" guztietarako edo baterako berezia da.</li>
-                                <li>PROXMOX web-administratzailea HTML5 da; beraz, besteak beste, Androiden, Iap-en eta tableten bidez konektatu eta lan egin ahal izango duzu.</li>
-                           </ol>
-                    </div>
+                    <h3>DESKRIBAPENA</h3>
+                    <p>&nbsp&nbspProxmox Bare-Metal plataforma bat da, eta zuzenean instalatzen da zerbitzari fisikoan, hardwarea ahalik eta gehien aprobetxatzeko makina birtualak sortzeko eta kudeatzeko.
+                    </p>
+                    
+                    <h4>Funtzioak</h4>
+                        <ol id="pausuak">
+                            <li>"Makina birtualak" gehitzea eta kudeatzea. Adibidez, besteak beste, itzali, berrabiarazi eta hardware birtuala erants dezakezu.</li>
+                            <li>Makinak nodo batetik bestera mugitu edo "Prestasun handia" aktibatu.</li>
+                            <li>"Makina birtualaren" interfaze grafiko edo kontsolara zuzenean konektatzea, VNC "HTML5 WebSockets and Canvas -- NoVNC" konexio seguru baten bidez.</li>
+                            <li>Segurtasun-kopiak programatu, segurtasun-kopiak leheneratu edo Snapshot sortu.</li>
+                            <li> Ikus grafikoki "Makina birtualen" informazioa, hala nola sare-trafikoa, prozesadorearen kontsumoa, memoriaren kontsumoa, etab.</li>
+                            <li>Batezbestekoak ISO formatuan igotzea, "Makina birtualetan" sistema eragileak instalatzeko.</li>
+                            <li>Nodoen konfigurazioa aldatu.</li>
+                            <li>"Proxmox Firewall VE"-en arauak definitzea "Makina Birtual" guztietarako edo baterako berezia da.</li>
+                            <li>PROXMOX web-administratzailea HTML5 da; beraz, besteak beste, Androiden, Iap-en eta tableten bidez konektatu eta lan egin ahal izango duzu.</li>
+                        </ol>
+                </div>
             </div>
         </div>
         </div>
         <footer>
             <div class="footerP1">
-                    <img  src="/Media/Footer/instagra.png">
-                    <a>@ServerWiki</a>
-                    <img  src="/Media/Footer/twitter-logo-6.png">
-                    <a>@ServerWiki</a> 
-                    <img src="/Media/Footer/gmail.png">
-                    <a>ServerWiki@gmail.com</a>
+                <img  src="Media/Footer/instagra.png">
+                <a>@ServerWiki</a>
+                <img  src="Media/Footer/twitter-logo-6.png">
+                <a>@ServerWiki</a> 
+                <img src="Media/Footer/gmail.png">
+                <a>ServerWiki@gmail.com</a>
             </div>
             <div class="footerP2">
                 <a>@Talde5</a>
