--- a/index copy.html
+++ b/index copy.html
@@ -32,15 +32,12 @@
 </div>
     <footer>
         <div class="footerP1">
-
-                <img  src="/Media/Footer/instagra.png">
-                <a>@ServerWiki</a>
-           
-                <img  src="/Media/Footer/twitter-logo-6.png">
-                <a>@ServerWiki</a>
-          
-                <img src="/Media/Footer/gmail.png">
-                <a>ServerWiki@gmail.com</a>
+            <img  src="Media/Footer/instagra.png">
+            <a>@ServerWiki</a>
+            <img  src="Media/Footer/twitter-logo-6.png">
+            <a>@ServerWiki</a> 
+            <img src="Media/Footer/gmail.png">
+            <a>ServerWiki@gmail.com</a>
         </div>
         <div class="footerP2">
             <a>@Talde5</a>
