--- a/Proxmox2.html
+++ b/Proxmox2.html
@@ -111,13 +111,12 @@
         </div>
         <footer>
             <div class="footerP1">
-                    <img  src="/Media/Footer/instagra.png">
-                    <a>@ServerWiki</a>
-                    <img  src="/Media/Footer/twitter-logo-6.png">
-                    <a>@ServerWiki</a> 
-                    <img src="/Media/Footer/gmail.png">
-                    <a>ServerWiki@gmail.com</a>
-            </div>
+                <img  src="Media/Footer/instagra.png">
+                <a>@ServerWiki</a>
+                <img  src="Media/Footer/twitter-logo-6.png">
+                <a>@ServerWiki</a> 
+                <img src="Media/Footer/gmail.png">
+                <a>ServerWiki@gmail.com</a>
             <div class="footerP2">
                 <a>@Talde5</a>
             </div>
