SERVER WIKI FIN
.

--- a/Galderak.html
+++ b/Galderak.html
@@ -48,8 +48,8 @@
                 </div>
                 <!-- Botoiak galdera batetik bestera pasatzeko -->
                 <div class="botoiak">
-                    <a href="/Galderak3.html"><img src="/Media/FlechaIzquierda.png"  class="botonAnterior" name="botonAnterior" ></a>
-                    <a href="/Galderak2.html"><img src="/Media/FlechaDerecha.png" class="botonSiguiente" name="botonSiguiente" ></a>
+                    <a href="Galderak3.html"><img src="Media/FlechaIzquierda.png"  class="botonAnterior" name="botonAnterior" ></a>
+                    <a href="Galderak2.html"><img src="Media/FlechaDerecha.png" class="botonSiguiente" name="botonSiguiente" ></a>
                 </div>  
             </div>
         </div>
