--- a/Galderak2.html
+++ b/Galderak2.html
@@ -49,8 +49,8 @@
                         </p>
                     </div>
                     <div class="botoiak">
-                        <a href="/Galderak.html"><img src="/Media/FlechaIzquierda.png"  class="botonAnterior" name="botonAnterior" ></a>
-                        <a href="/Galderak3.html"><img src="/Media/FlechaDerecha.png" class="botonSiguiente" name="botonSiguiente" ></a>
+                        <a href="Galderak.html"><img src="Media/FlechaIzquierda.png"  class="botonAnterior" name="botonAnterior" ></a>
+                        <a href="Galderak3.html"><img src="Media/FlechaDerecha.png" class="botonSiguiente" name="botonSiguiente" ></a>
                     </div>
                 </div>
         </div>
