target="_blank" gehitu dira linketara

--- a/DNS.html
+++ b/DNS.html
@@ -47,16 +47,16 @@
                         <h3>ZER DA, DNS-A?</h3>
                         <p>&nbsp&nbspDNS-a Domain Name System esan nahi du, domeinuari dagokion zerbitzarian idazteaz gain, benetako helbidea, 
                             IP izeneko zenbakizko erlazioa, domeinuaren izenean itzultzeko balioko digu, hau da: IP XXX.XXX.XXX.X 
-                            izan beharrean <a href="#">www.serverwiki.com</a> erakutsiko digu.</p>
+                            izan beharrean <a href="#" target="_blank">wiki.talde4.com</a> erakutsiko digu.</p>
                         
                         <h3>NOLA FUNTZIONATZEN DU?</h3>
-                        <p>&nbsp&nbspErabiltzaileak domeinua idazterakoan (<a href="#">www.server-wiki.com</a>) eta enter botoia 
+                        <p>&nbsp&nbspErabiltzaileak domeinua idazterakoan (<a href="#" target="_blank">wiki.talde4.com</a>) eta enter botoia 
                             sakatzerakoan nabigatzaileak DNS zerbitzariarekin gure domeinuaren IP helbidea zein den begiratuko du eta,
                             topatzerakoan, nabigatzaileak IP XXX.XXX.XXX.X itzuliko du, honekin erabiltzeileak gure 
                             webgunea ikusi ahalko du.</p>    
                         
                         <h3>NOLA ALDATU DNS-A</h3>
-                        <p>&nbspErabiltzaileak Proxmoxa konfiguratzen duen lehen aldian DNS-aren izena gordeko du, aldatu nahi izatekotan, kanpoko programa bat erabiliko dugu: <a href= "https://wiki.debian.org/Bind9#Installation">BIND9</a>, programa honen erabilerarekin, DNS zerbitzari bat sare batean jarriko du eta IP helbideak izen batengatik aldatzeko aukera emango digu. <br><br>
+                        <p>&nbspErabiltzaileak Proxmoxa konfiguratzen duen lehen aldian DNS-aren izena gordeko du, aldatu nahi izatekotan, kanpoko programa bat erabiliko dugu: <a href= "https://wiki.debian.org/Bind9#Installation" target="_blank">BIND9</a>, programa honen erabilerarekin, DNS zerbitzari bat sare batean jarriko du eta IP helbideak izen batengatik aldatzeko aukera emango digu. <br><br>
                             &nbsp&nbspBehin programa instalatuta daukagunean hurrengo pausoak jarraituko ditugu:<br><br>
                         </p>    
 
