--- a/Debian.html
+++ b/Debian.html
@@ -60,7 +60,7 @@
                         <h3>NOLA DESKARGATU DEZAKET?</h3>
                         <p>&nbsp&nbspPrestatzen ari garen zerbitzaria proxmoxen bidez desplegatuko dugunez, Debianen oinarritutako VM bat sortzeko pausuak azalduko dizuegu hurrengo ISO-ak erabiliz:</p>
                             <p>&nbsp&nbsp• &nbsp Informazio gehiagorako Debianen dokumentazioa irakurtzea gomendatzen dizuegu:</p>
-                                <p><a href="https://www.debian.com/doc/" id="deskarga">https://www.debian.com/doc/</a></p>
+                                <p><a href="https://www.debian.com/doc/" target="_blank" id="deskarga">https://www.debian.com/doc/</a></p>
                     </div>
             </div>
         </div>
