--- a/GitHub.html
+++ b/GitHub.html
@@ -56,8 +56,8 @@
                             &nbsp&nbspBaina zertarako erabiltzen da GitHub? Beno, oro har, mundu osoko beste pertsona batzuekin elkarlanean aritzeko, proiektuak planifikatzeko eta lanaren jarraipena egiteko aukera ematen du.    
                         </p>
                         <h3>KONTU BAT EGIN ETA GITHUB-a BINKULATU</h3>
-                        <p>&nbsp&nbspLehenengo kontu bat sortu behar duzu GitHub-ean: <a href="https://github.com/">https://github.com/</a>. <br><br>
-                            &nbsp&nbspKontu bat sortu ondoren, github desktop instalatu behar duzu <a href="https://desktop.github.com/">https://desktop.github.com/</a>. <br><br>
+                        <p>&nbsp&nbspLehenengo kontu bat sortu behar duzu GitHub-ean: <a href="https://github.com/" target="_blank">https://github.com/</a>. <br><br>
+                            &nbsp&nbspKontu bat sortu ondoren, github desktop instalatu behar duzu <a href="https://desktop.github.com/" target="_blank">https://desktop.github.com/</a>. <br><br>
                             &nbsp&nbspInstalazioa amaitu ondoren, aplikazioa zabaldu eta binkulatu behar duzu kontua. Option lekuan klikatuz. <br><br><br><br><br><br>
                             <img src="Media/GitHub/github1.PNG" id="argazkiaPausoka"><br>
                         </p>
