--- a/Ubuntu.html
+++ b/Ubuntu.html
@@ -56,9 +56,9 @@
                         </p>
                         <h3>NOLA DESKARGATU DEZAKET?</h3>
                         <p>&nbsp&nbspPrestatzen ari garen zerbitzaria proxmoxen bidez desplegatuko dugunez, Ubuntun oinarritutako VM bat sortzeko pausuak azalduko dizuegu hurrengo ISO-ak erabiliz:</p>
-                        <p><a href="https://ubuntu.com/download/desktop" id="deskarga">https://ubuntu.com/download/desktop</a></p>
+                        <p><a href="https://ubuntu.com/download/desktop" target="_blank" id="deskarga">https://ubuntu.com/download/desktop</a></p>
                         <p>&nbsp&nbsp• &nbsp Informazio gehiagorako Ubunturen dokumentazioa irakurtzea gomendatzen dizuegu:</p>
-                        <p><a href="https://help.ubuntu.com/" id="deskarga">https://help.ubuntu.com/</a></p>
+                        <p><a href="https://help.ubuntu.com/" target="_blank" id="deskarga">https://help.ubuntu.com/</a></p>
                     </div>
             </div>
         </div>
